Fixed minor spacing issue

--- a/login.css
+++ b/login.css
@@ -14,7 +14,6 @@ button {
 }
 
 .picture-box {
-  margin-bottom: 1em;
   padding: 0.25em;
   background: rgb(155, 123, 94);
   border-radius: 5px;
